attempt fix mobile sandbox goes out of screen

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
+    width: -webkit-fill-available;
+    height: -webkit-fill-available;
 }
 
 canvas {
-    height: 100%;
+    height: -webkit-fill-available;
     object-fit: contain;
     
     image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
@@ -19,14 +19,12 @@ canvas {
 
 #canvasContainer {
     float: left;
-    width: 100vh;
-    height: 100vh;
+    height: -webkit-fill-available;
 }
 
 #uiContainer {
     float: left;
-    width: calc(100vw - 100vh);
-    height: 100vh;
+    height: -webkit-fill-available;
 }
 
 #uiContainer * {
